--- a/index.html
+++ b/index.html
@@ -12,38 +12,38 @@
 <body>
     <div class="main-container">
     <div class="display-container">
-        <div class="result">Hi</div>
+        <div class="previous">987654321</div>
+        <div class="current">987654321</div>
     </div>
-    <div class="delete-layer">
-        <button class="delete">Delete</button>
-        <button class="clear">Clear</button>
+    <div class="layer">
+        <button class="function">AC</button>
+        <button class="function">+/-</button>
+        <button class="function">%</button>
+        <button class="operator">/</button>
     </div>
     <div class="digit-container">
         <div class="layer">
-            <button class="7">7</button>
-            <button class="8">8</button>
-            <button class="9">9</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operator">x</button>
         </div>
         <div class="layer">
-            <button class="4">4</button>
-            <button class="5">5</button>
-            <button class="6">6</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operator">-</button>
         </div>
         <div class="layer">
-            <button class="1">1</button>
-            <button class="2">2</button>
-            <button class="3">3</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="operator">+</button>
         </div>
-        <div class="layer">
-            <button class="0">0</button>
+        <div class="bottom-layer">
+            <button class="number" data-number="0">0</button>
             <button class="decimal">.</button>
             <button class="equals">=</button>
-        </div>
-        <div class="operator-container">
-            <button class="add">+</button>
-            <button class="subtract">-</button>
-            <button class="multiply">&#215;</button>
-            <button class="divide">&divide;</button>
         </div>
     </div>
 </div>
