Added chaining functionality and make it iPhone friendly

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <div class="main-container">
     <div class="display-container">
-        <div class="previous">987654321</div>
-        <div class="current">987654321</div>
+        <div class="previous"></div>
+        <div class="current">0</div>
     </div>
     <div class="layer">
-        <button class="function">AC</button>
-        <button class="function">+/-</button>
-        <button class="function">%</button>
+        <button class="clear">AC</button>
+        <button class="plus-minus">+/-</button>
+        <button class="percentage">%</button>
         <button class="operator">/</button>
     </div>
     <div class="digit-container">
